[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64"]

[project]
name = "aiq_mercury_agent"
version = "0.1.0"
dependencies = [
  "arxiv~=2.1.3",
  "colorama~=0.4.6",
  "markdown-it-py~=3.0",
  "nvidia-haystack==0.1.2",
  "wikipedia~=1.4.0",
]
requires-python = ">=3.12"
description = "Custom AgentIQ Workflow"
classifiers = ["Programming Language :: Python"]

[project.entry-points.'aiq.components']
aiq_mercury_agent = "aiq_mercury_agent.register"
