[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mercury"
version = "0.1.0"
description = "Mercury agent example"
requires-python = ">=3.8"
dependencies = [
    "agentiq",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langgraph",
    "haystack-ai",
    "llama-index",
    "llama-index-llms-huggingface",
    "llama-index-embeddings-huggingface",
    "llama-index-readers-file",
    "llama-index-core",
]

[project.entry-points."agentiq.workflows"]
mercury = "mercury.register:mercury_workflow"

[project.entry-points."agentiq.functions"]
wikipedia_search_tool = "mercury.wikipedia_search_tool:wikipedia_search"
